# imu-kalman

./: .clang-format  .dir-locals.el  .gitmodules  .mxproject  CMakeLists.txt  Jenkinsfile  Makefile  README.md  STM32F303XC_FLASH.ld  arm-none-eabi.cmake  imu-kalman.ioc
Inc/: FreeRTOSConfig.h  OrientationEstimator.h  console_commands.h  extkalman.h  kalman.h  l3gd20.h  lsm303dlhc.h  main.h  matrix.h  stm32f3xx_it.h  types.h  vector.h
Src/: OrientationEstimator.cpp  console_commands.c  console_commands.cpp  l3gd20.cpp  lsm303dlhc.cpp  main.c  main.cpp  stm32f3xx_hal_msp.c  stm32f3xx_hal_timebase_tim.c  stm32f3xx_it.c
app/: CMakeLists.txt
app/src/: main.cc
mcu/: CMakeLists.txt
mcu/include/: stm32f3xx.h  system_stm32f3xx.h
mcu/src/: startup_stm32f303xc.S
tests/: testKalman.cpp  testMatrix.cpp  testVector.cpp
